trying to fix all the images
absolute_url to relative_url

--- a/about/creative-team.html
+++ b/about/creative-team.html
@@ -22,9 +22,9 @@ permalink: /about/creative-team/
                 <li class="media mt-2">
                         <a href="{{ team-member.url | relative_url | replace: '//', '/' }}" class="mr-4 d-none d-md-block" style="max-width: 30%;">
                             {% if team-member.profile %}
-                                <img src="{{ team-member.profile | absolute_url }}" class="mr-3 img-fluid  d-none d-md-block" style="max-width: 100%;" alt="{{ team-member.title }}'s profile">
+                                <img src="{{ team-member.profile | relative_url }}" class="mr-3 img-fluid  d-none d-md-block" style="max-width: 100%;" alt="{{ team-member.title }}'s profile">
                             {% else %}
-                                <img src="{{ '/assets/images/team/np_cat_114598_B8B8B8.png' | absolute_url }}" class="mr-3 img-fluid" style="max-width: 100%;" alt="Generic Cat Profile Picture">
+                                <img src="{{ '/assets/images/team/np_cat_114598_B8B8B8.png' | relative_url }}" class="mr-3 img-fluid" style="max-width: 100%;" alt="Generic Cat Profile Picture">
                             {% endif %}
                         </a>
                     <div class="media-body">
@@ -59,9 +59,9 @@ permalink: /about/creative-team/
                 <li class="media mt-2">
                         <a href="{{ team-member.url | relative_url | replace: '//', '/' }}" class="mr-4 d-none d-md-block" style="max-width: 30%;">
                             {% if team-member.profile %}
-                                <img src="{{ team-member.profile | absolute_url }}" class="mr-3 img-fluid  d-none d-md-block" style="max-width: 100%;" alt="{{ team-member.title }}'s profile">
+                                <img src="{{ team-member.profile | relative_url }}" class="mr-3 img-fluid  d-none d-md-block" style="max-width: 100%;" alt="{{ team-member.title }}'s profile">
                             {% else %}
-                                <img src="{{ '/assets/images/team/np_cat_114598_B8B8B8.png' | absolute_url }}" class="mr-3 img-fluid" style="max-width: 100%;" alt="Generic Cat Profile Picture">
+                                <img src="{{ '/assets/images/team/np_cat_114598_B8B8B8.png' | relative_url }}" class="mr-3 img-fluid" style="max-width: 100%;" alt="Generic Cat Profile Picture">
                             {% endif %}
                         </a>
                     <div class="media-body">
