--- a/about/design-toolkit.html
+++ b/about/design-toolkit.html
@@ -14,7 +14,7 @@ permalink: /about/design-toolkit/
             <ul class="list-unstyled">
                 <li class="media mt-2">
                         <a href="https://ucla.app.box.com/v/build-something-toolkit" class="mr-4 d-none d-md-block" style="max-width: 30%;">
-                                <img src="{{ '/assets/images/build-something-cover.jpg' | absolute_url }}" class="mr-3 img-fluid  d-none d-md-block" style="max-width: 100%;" alt="Build something toolkit icon">
+                                <img src="{{ '/assets/images/build-something-cover.jpg' | relative_url }}" class="mr-3 img-fluid  d-none d-md-block" style="max-width: 100%;" alt="Build something toolkit icon">
                         </a>
                     <div class="media-body">
                             <h3 class="mt-0 mb-1"><a href="https://ucla.app.box.com/v/build-something-toolkit">The build something toolkit</a></h3>
@@ -41,17 +41,17 @@ permalink: /about/design-toolkit/
                 <li class="media mt-2">
                         <!-- don't have thumbnail for this yet -->
                         <!-- 
-                        <a href="{{ '/wire-way/' | absolute_url }}" class="mr-4 d-none d-md-block" style="max-width: 30%;">
-                                <img src="{{ '/assets/images/wire-way-tn.jpg' | absolute_url }}" class="mr-3 img-fluid  d-none d-md-block" style="max-width: 100%;" alt="Build something toolkit icon">
+                        <a href="{{ '/wire-way/' | relative_url }}" class="mr-4 d-none d-md-block" style="max-width: 30%;">
+                                <img src="{{ '/assets/images/wire-way-tn.jpg' | relative_url }}" class="mr-3 img-fluid  d-none d-md-block" style="max-width: 100%;" alt="Build something toolkit icon">
                         </a>
                         -->
                     <div class="media-body">
-                            <h3 class="mt-0 mb-1"><a href="{{ '/wire-way/' | absolute_url }}">The WI+RE Way</a></h3>
+                            <h3 class="mt-0 mb-1"><a href="{{ '/wire-way/' | relative_url }}">The WI+RE Way</a></h3>
                             <p class="post-subtitle text-justify">
                                 The guiding principles behind WI+RE's approach to learner-centered design.
                             </p>
                         <div class="btn-group btn-group-sm float-right" role="group" aria-label="Actions">
-                            <a href="{{ '/wire-way/' | absolute_url }}" class="btn btn-primary">Learn more</a>
+                            <a href="{{ '/wire-way/' | relative_url }}" class="btn btn-primary">Learn more</a>
                         </div>
                     </div>
                 </li>
