--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@ background: '/assets/images/backgrounds/art-creative-flying-17679-3000.jpg'
 <h2>Hi there!</h2>
 <div class="row">
     <div class="col-md">
-        <p>The <a href="{{ '/about/creative-team/' | absolutel_url }}">WI+RE team</a> leverages a <a href="{{ '/about/design-toolkit/' | absolute_url }}">design toolkit</a> to create and continually improve <a href="{{ '/tutorials/' | absolute_url }}">open online learning modules</a>. We also experiment and reflect on our process in the <a href="{{ '/sandbox/' | absolute_url }}">WI+RE sandbox</a>, and share the principles behind our work in our manifesto, <a href="{{ '/wire-way/' | absolute_url }}">the WI+RE way</a>.</p>
+        <p>The <a href="{{ '/about/creative-team/' | absolutel_url }}">WI+RE team</a> leverages a <a href="{{ '/about/design-toolkit/' | relative_url }}">design toolkit</a> to create and continually improve <a href="{{ '/tutorials/' | relative_url }}">open online learning modules</a>. We also experiment and reflect on our process in the <a href="{{ '/sandbox/' | relative_url }}">WI+RE sandbox</a>, and share the principles behind our work in our manifesto, <a href="{{ '/wire-way/' | relative_url }}">the WI+RE way</a>.</p>
     </div>
     
     <div class="col-md-5">
@@ -19,6 +19,6 @@ background: '/assets/images/backgrounds/art-creative-flying-17679-3000.jpg'
             <a class="btn btn-outline-primary btn-block" href="{{ '/contact/' | relative_url }}" role="button">Contact us &raquo;</a>
     </div>
 </div>
-<img src="{{ '/assets/images/team/WI+RE-Banner.png' | absolute_url }}" alt="The WI+RE team on a video shooting creating a video on reading strategies. Text overlay: WI+RE Writing Instruction and Research Education.  Writing strategies, research tips, time-saving resources." class="img-fluid mx-auto align-middle img-thumbnail" />
+<img src="{{ '/assets/images/team/WI+RE-Banner.png' | relative_url }}" alt="The WI+RE team on a video shooting creating a video on reading strategies. Text overlay: WI+RE Writing Instruction and Research Education.  Writing strategies, research tips, time-saving resources." class="img-fluid mx-auto align-middle img-thumbnail" />
 
 
