--- a/workshops/index.html
+++ b/workshops/index.html
@@ -19,9 +19,9 @@ background:
                 <li class="media mt-2">
                         <a href="{{ workshop.url | relative_url | replace: '//', '/' }}" class="mr-4 d-none d-md-block" style="max-width: 30%;">
                             {% if workshop.thumbnail %}
-                                <img src="{{ workshop.thumbnail | absolute_url }}" class="mr-3 img-fluid  d-none d-md-block" style="max-width: 100%;" alt="Workshop icon">
+                                <img src="{{ workshop.thumbnail | relative_url }}" class="mr-3 img-fluid  d-none d-md-block" style="max-width: 100%;" alt="Workshop icon">
                             {% else %}
-                                <img src="{{ '/assets/images/icons/tutorial-tn.png' | absolute_url }}" class="mr-3 img-fluid" style="max-width: 100%;" alt="Generic workshop icon">
+                                <img src="{{ '/assets/images/icons/tutorial-tn.png' | relative_url }}" class="mr-3 img-fluid" style="max-width: 100%;" alt="Generic workshop icon">
                             {% endif %}
                         </a>
                     <div class="media-body">
