--- a/about/design-toolkit.html
+++ b/about/design-toolkit.html
@@ -8,7 +8,7 @@ permalink: /about/design-toolkit/
 <!-- Design Toolkit -->
     <div class="card mt-5">
         <div class="card-header pt-4">
-            <h2>WI+RE's learner-centered design toolkit</h2>
+            <h2>Learner-centered design</h2>
         </div>
         <div class="card-body">
             <ul class="list-unstyled">
@@ -34,7 +34,7 @@ permalink: /about/design-toolkit/
 <!-- Poster Toolkit -->
     <div class="card mt-5">
         <div class="card-header pt-4">
-            <h2>WI+RE's Interactive Poster Toolkit</h2>
+            <h2>Interactive posters</h2>
         </div>
         <div class="card-body">
             <ul class="list-unstyled">
@@ -45,13 +45,13 @@ permalink: /about/design-toolkit/
                     <div class="media-body">
                             <h3 class="mt-0 mb-1"><a href="https://ucla.box.com/v/SCILWorks2019Toolkit">Interactive poster toolkit</a></h3>
                             <p class="post-subtitle text-justify">
-                                Turn static exhibits and marketing posters into interactive conversations with the interactive poster series toolkit. The toolkit contains everything you need to make your own interactive poster series, including tips and template files.
+                                Turn static library marketing posters into engaging conversations with this interactive poster series toolkit. The toolkit contains everything you need to make your own interactive poster series, including tips and template files.
                             </p>
                         <div class="btn-group btn-group-sm float-right mx-2" role="group" aria-label="Actions">
                             <a href="https://ucla.box.com/v/SCILWorks2019Toolkit" class="btn btn-primary">Template Files (PDF)</a>
                         </div>
                         <div class="btn-group btn-group-sm float-right mx-2" role="group" aria-label="Actions">
-                            <a href="https://ucla.box.com/v/SCILWorks2019Toolkit" class="btn btn-primary">Assessment report</a>
+                            <a href="{{ '/sandbox/research-process-poster-series/' | relative_url }}" class="btn btn-primary">Project summary</a>
                         </div>
                     </div>
                 </li>
