--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -12,7 +12,7 @@ background:
 {% for group in groups %}
     <div class="card mt-5 shadow">
         <div class="card-header pt-4">
-            <h2>{{ group.name }}</h2>
+            <h2 id="{{ group.name | slugify }}">{{ group.name }}</h2>
         </div>
         <div class="card-body">
             <ul class="list-unstyled">
