--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@ background: '/assets/images/backgrounds/art-creative-flying-17679-3000.jpg'
 <h2>Hi there!</h2>
 <div class="row">
     <div class="col-md">
-        <p>The <a href="{{ '/about/creative-team/' | absolutel_url }}">WI+RE team</a> leverages a <a href="{{ '/about/design-toolkit/' | relative_url }}">design toolkit</a> to create and continually improve <a href="{{ '/tutorials/' | relative_url }}">open online learning modules</a>. We also experiment and reflect on our process in the <a href="{{ '/sandbox/' | relative_url }}">WI+RE sandbox</a>, and share the principles behind our work in our manifesto, <a href="{{ '/wire-way/' | relative_url }}">the WI+RE way</a>.</p>
+        <p>The <a href="{{ '/about/creative-team/' | relative_url }}">WI+RE team</a> leverages a <a href="{{ '/about/design-toolkit/' | relative_url }}">design toolkit</a> to create and continually improve <a href="{{ '/tutorials/' | relative_url }}">open online learning modules</a>. We also experiment and reflect on our process in the <a href="{{ '/sandbox/' | relative_url }}">WI+RE sandbox</a>, and share the principles behind our work in our manifesto, <a href="{{ '/wire-way/' | relative_url }}">the WI+RE way</a>.</p>
     </div>
     
     <div class="col-md-5">
