--- a/about/design-toolkit.html
+++ b/about/design-toolkit.html
@@ -21,7 +21,7 @@ permalink: /about/design-toolkit/
                             <p class="post-subtitle text-justify">
                                 Empathy mapping, journey mapping, user feedback, and rapid-prototyping tools to help guide you through a learner-centered design process.
                             </p>
-                        <p>All materials in this toolkit are CC BY 4.0: Brecher Cook, Dani, & Worsham, Doug. (2018, April). Let’s Build Something! (The Toolkit). A Rapid-Prototyping Instructional Design Workshop.</p>
+                        <p style="font-size: small;">All materials in this toolkit are CC BY 4.0: Brecher Cook, Dani, &amp; Worsham, Doug. (2018, April). Let’s Build Something! (The Toolkit). A Rapid-Prototyping Instructional Design Workshop. Pre-conference workshop at the 2018 CARL Conference, Redwood City, CA.</p>
                         <div class="btn-group btn-group-sm float-right" role="group" aria-label="Actions">
                             <a href="https://ucla.app.box.com/v/build-something-toolkit" class="btn btn-primary">PDF</a>
                         </div>
