fixing link on search adding search to 404

--- a/search.html
+++ b/search.html
@@ -11,4 +11,4 @@ permalink: /search/
 <div class="gcse-searchbox"></div>
 <div class="gcse-searchresults"></div>
 
-<p>Not finding what you are looking for? <a href="{{ '/contact' | absolute_url }}" target="_blank">Contact the WI+RE team</a> and let us know how we can help!</p>
+<p>Not finding what you are looking for? <a href="{{ '/contact' | relative_url }}" target="_blank">Contact the WI+RE team</a> and let us know how we can help!</p>
