--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -40,7 +40,7 @@ background: '/assets/images/sand.jpg'
           </div>
           -->
           <div class="col-12">
-              <h3 style="font-size: .9em;"><a href="{{ post.url | absolute_url }}" style="text-decoration: none;">{{ post.title }}</a></h3>
+              <h3 style="font-size: .9em;"><a href="{{ post.url | relative_url }}" style="text-decoration: none;">{{ post.title }}</a></h3>
           </div>
     </div>
     <hr>
