--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -5,7 +5,7 @@ description: A place for the WI+RE creative team to experiment, prototype, and t
 permalink: /sandbox/
 background: '/assets/images/sand.jpg'
 ---
-{% capture member-name-list %}{{ site.team-members | map: 'title' | split: ',' }}{% endcapture %}
+{% capture member-name-list %}{{ site.team-members | map: 'username' | split: ',' }}{% endcapture %}
 {% assign groups = site.posts | group_by: "category" | sort: "date" %}
 
 {% for post in site.posts %}
@@ -15,7 +15,11 @@ background: '/assets/images/sand.jpg'
                   {% if post.authors %} by 
                         {% for authorname in post.authors %}
                             {% if member-name-list contains authorname %}
-                            <a href="{{ authorname | slugify | prepend: '/about/creative-team/' | relative_url }}">{{ authorname }}</a>{% if forloop.last == false %},{% endif %}
+                                {% for team-member in site.team-members %}
+                                    {% if authorname == team-member.username %}
+                                        <a href="{{ team-member.title | slugify | prepend: '/about/creative-team/' | relative_url }}">{{ team-member.displayname }}</a>{% if forloop.last == false %},{% endif %}
+                                    {% endif %}
+                                {% endfor %}
                             {% else %}
                             {{ authorname }}{% if forloop.last == false %},{% endif %}
                             {% endif %}
