--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -17,9 +17,9 @@ background: '/assets/images/sand.jpg'
                             {% if member-name-list contains authorname %}
                                 {% for team-member in site.team-members %}
                                     {% if authorname == team-member.username %}
-                                        <a href="{{ team-member.title | slugify | prepend: '/about/creative-team/' | relative_url }}">{{ team-member.displayname }}</a>{% if forloop.last == false %},{% endif %}
+                                        <a href="{{ team-member.title | slugify | prepend: '/about/creative-team/' | relative_url }}">{{ team-member.displayname }}</a>
                                     {% endif %}
-                                {% endfor %}
+                                {% endfor %}{% if forloop.last == false %},{% endif %}
                             {% else %}
                             {{ authorname }}{% if forloop.last == false %},{% endif %}
                             {% endif %}
