Add -'s, change $ to ,

--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -16,13 +16,13 @@ background: '/assets/images/sand.jpg'
                         {% for authorname in post.authors %}
                             {% if member-name-list contains authorname %}
                                 {% for team-member in site.team-members %}
-                                    {% if authorname == team-member.username %}
+                                    {%- if authorname == team-member.username -%}
                                         <a href="{{ team-member.title | slugify | prepend: '/about/creative-team/' | relative_url }}">{{ team-member.displayname }}</a>
-                                    {% endif %}
+                                    {%- endif -%}
                                 {% endfor %}<!--{% if forloop.last == false %}*{% endif %}-->
                             {% else %}
                             {{ authorname }}<!--{% if forloop.last == false %},{% endif %}-->
-                            {% endif %}{% if forloop.last == false %}${% endif %}
+                            {% endif %}{% if forloop.last == false %},{% endif %}
                         {% endfor %}
                     {% else %}
                     <a href="{{ '/about/creative-team/' | relative_url }}">{{ site.author }}</a>
