--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -19,10 +19,10 @@ background: '/assets/images/sand.jpg'
                                     {%- if authorname == team-member.username -%}
                                         <a href="{{ team-member.title | slugify | prepend: '/about/creative-team/' | relative_url }}">{{ team-member.displayname }}</a>
                                     {%- endif -%}
-                                {% endfor %}{% if forloop.last == false %}*{% endif %}
+                                {% endfor %}<!--{% if forloop.last == false %}*{% endif %}-->
                             {% else %}
-                            {{ authorname }}{% if forloop.last == false %}${% endif %}
-                            {% endif %}<!--{% if forloop.last == false %},{% endif %}-->
+                            {{ authorname }}<!--{% if forloop.last == false %}${% endif %}-->
+                            {% endif %}{%- if forloop.last == false -%},{%- endif -%}
                         {% endfor %}
                     {% else %}
                     <a href="{{ '/about/creative-team/' | relative_url }}">{{ site.author }}</a>
