--- a/about/design-toolkit.html
+++ b/about/design-toolkit.html
@@ -21,6 +21,7 @@ permalink: /about/design-toolkit/
                             <p class="post-subtitle text-justify">
                                 Empathy mapping, journey mapping, user feedback, and rapid-prototyping tools to help guide you through a learner-centered design process.
                             </p>
+                            <p>Interested in a behind-the-scenes look at how this toolkit is used in practice? See this short video on "<a href="https://www.youtube.com/watch?v=hfkG4bWjRmI" target="_blank">The Making of WI+RE's Wheel of Sources.</a>" </p>
                         <p style="font-size: small;">All materials in this toolkit are CC BY 4.0: Brecher Cook, Dani, &amp; Worsham, Doug. (2018, April). Let’s Build Something! (The Toolkit). A Rapid-Prototyping Instructional Design Workshop. Pre-conference workshop at the 2018 CARL Conference, Redwood City, CA.</p>
                         <div class="btn-group btn-group-sm float-right" role="group" aria-label="Actions">
                             <a href="https://ucla.app.box.com/v/build-something-toolkit" class="btn btn-primary">PDF</a>
