--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,8 @@ background: '/assets/images/backgrounds/art-creative-flying-17679-3000.jpg'
 <h2>Hi there!</h2>
 <div class="row">
     <div class="col-md">
-        <p>The <a href="{{ '/about/creative-team/' | relative_url }}">WI+RE team</a> leverages a <a href="{{ '/about/design-toolkit/' | relative_url }}">design toolkit</a> to create and continually improve <a href="{{ '/tutorials/' | relative_url }}">open online learning modules</a>. We also experiment and reflect on our process in the <a href="{{ '/sandbox/' | relative_url }}">WI+RE sandbox</a>, and share the principles behind our work in our manifesto, <a href="{{ '/wire-way/' | relative_url }}">the WI+RE way</a>.</p>
+        <p>WI+RE is a learner-led community at UCLA focused on helping everyone succeed in their writing and research projects.</p>
+        <p>The <a href="{{ '/about/creative-team/' | relative_url }}">WI+RE team</a> leverages a <a href="{{ '/about/design-toolkit/' | relative_url }}">learner-centered design toolkit</a> to create and continually improve <a href="{{ '/tutorials/' | relative_url }}">open online learning modules</a>. We also experiment and reflect on our process in the <a href="{{ '/sandbox/' | relative_url }}">WI+RE sandbox</a>, and share the principles behind our work in our manifesto, <a href="{{ '/wire-way/' | relative_url }}">the WI+RE way</a>.</p>
     </div>
     
     <div class="col-md-5">
@@ -19,6 +20,98 @@ background: '/assets/images/backgrounds/art-creative-flying-17679-3000.jpg'
             <a class="btn btn-outline-primary btn-block" href="{{ '/contact/' | relative_url }}" role="button">Contact us &raquo;</a>
     </div>
 </div>
+
+<h3>Highlights</h3>
+<!-- to edit the numbers in this section, edit the file _data/stats.yml and they will update here! -->
+<div class="card-deck">
+    <div class="card">
+    <div class="card-body">
+       <h4 class="card-title text-center">{{ site.data.stats.workshops.number}}+ <br><small class="text-muted">Workshops completed at UCLA</small></h4>
+    </div>
+  </div> 
+  <div class="card">
+    <div class="card-body">
+       <h4 class="card-title text-center">{{ site.data.stats.youtube.number}}+ <br><small class="text-muted">views on YouTube</small></h4>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-body">
+      <h4 class="card-title text-center">{{ site.data.stats.website.number}}+ <br><small class="text-muted">Website page views</small></h4>
+    </div>
+  </div>
+</div>
+
+<h4 class="mt-5">Publications and Presentations</h4>
+<h5 class="mt-3">2020</h5>
+<div class="row justify-content-start">
+    <div class="col-md-10 col-sm-12">
+        {% for pub in site.data.publications.twentytwenty %}
+            <div class="card mb-2">
+              <div class="card-body">
+                  <h5 class="card-title"><a href="{{ pub.url}}" target="_blank"><i aria-hidden="true" class="{{ pub.fa-icon }}" title="{{ pub.type }}"></i><span class="sr-only">{{ pub.type }}</span> {{pub.title}}</a></h5>
+                <p class="card-text"><small>{{pub.place}}. By {{ pub.authors }}. {{ pub.date | date: "%b %d, %Y" }}.</small></p>
+                </div>
+            </div>
+    {% endfor %}
+    </div>
+</div>
+
+<h5 class="mt-3">2019</h5>
+<div class="row justify-content-start">
+    <div class="col-md-10 col-sm-12">
+        {% for pub in site.data.publications.twentynineteen %}
+            <div class="card mb-2">
+              <div class="card-body">
+                  <h5 class="card-title"><a href="{{ pub.url}}" target="_blank"><i aria-hidden="true" class="{{ pub.fa-icon }}" title="{{ pub.type }}"></i><span class="sr-only">{{ pub.type }}</span> {{pub.title}}</a></h5>
+                <p class="card-text"><small>{{pub.place}}. By {{ pub.authors }}. {{ pub.date | date: "%b %d, %Y" }}.</small></p>
+                </div>
+            </div>
+    {% endfor %}
+    </div>
+</div>
+
+<h5 class="mt-3">2018</h5>
+<div class="row justify-content-start">
+    <div class="col-md-10 col-sm-12">
+        {% for pub in site.data.publications.twentyeighteen %}
+            <div class="card mb-2">
+              <div class="card-body">
+                  <h5 class="card-title"><a href="{{ pub.url}}" target="_blank"><i aria-hidden="true" class="{{ pub.fa-icon }}" title="{{ pub.type }}"></i><span class="sr-only">{{ pub.type }}</span> {{pub.title}}</a></h5>
+                <p class="card-text"><small>{{pub.place}}. By {{ pub.authors }}. {{ pub.date | date: "%b %d, %Y" }}.</small></p>
+                </div>
+            </div>
+    {% endfor %}
+    </div>
+</div>
+
+<h5 class="mt-3">2017</h5>
+<div class="row justify-content-start">
+    <div class="col-md-10 col-sm-12">
+        {% for pub in site.data.publications.twentyseventeen %}
+            <div class="card mb-2">
+              <div class="card-body">
+                  <h5 class="card-title"><a href="{{ pub.url}}" target="_blank"><i aria-hidden="true" class="{{ pub.fa-icon }}" title="{{ pub.type }}"></i><span class="sr-only">{{ pub.type }}</span> {{pub.title}}</a></h5>
+                <p class="card-text"><small>{{pub.place}}. By {{ pub.authors }}. {{ pub.date | date: "%b %d, %Y" }}.</small></p>
+                </div>
+            </div>
+    {% endfor %}
+    </div>
+</div>
+
+<h5 class="mt-3">2016</h5>
+<div class="row justify-content-start">
+    <div class="col-md-10 col-sm-12">
+        {% for pub in site.data.publications.twentysixteen %}
+            <div class="card mb-2">
+              <div class="card-body">
+                  <h5 class="card-title"><a href="{{ pub.url}}" target="_blank"><i aria-hidden="true" class="{{ pub.fa-icon }}" title="{{ pub.type }}"></i><span class="sr-only">{{ pub.type }}</span> {{pub.title}}</a></h5>
+                <p class="card-text"><small>{{pub.place}}. By {{ pub.authors }}. {{ pub.date | date: "%b %d, %Y" }}.</small></p>
+                </div>
+            </div>
+    {% endfor %}
+    </div>
+</div>
+
 <img src="{{ '/assets/images/team/WI+RE-Banner.png' | relative_url }}" alt="The WI+RE team on a video shooting creating a video on reading strategies. Text overlay: WI+RE Writing Instruction and Research Education.  Writing strategies, research tips, time-saving resources." class="img-fluid mx-auto align-middle img-thumbnail" />
 
 
