--- a/elements.html
+++ b/elements.html
@@ -214,6 +214,42 @@ A series of related activities with integrated assessment and opportunities refl
 <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. A communi observantia non est recedendum. Cras mattis iudicium purus sit amet fermentum.</p>
 
 
+<!-- Highlights -->
+<h3>Highlights</h3>
+
+<section class="py-5">
+  <div class="container">
+    <div class="row">
+      <!-- Box -->
+      <div class="col-lg-4">
+        <div class="card mb-5 mb-lg-0">
+          <div class="card-body">
+              <h5 class="card-title text-center">1500+ <br><span class="text-muted">Workshops Completed</span></h5>
+          </div>
+        </div>
+      </div>
+      <!-- Box -->
+      <div class="col-lg-4">
+        <div class="card mb-5 mb-lg-0">
+          <div class="card-body">
+            <h5 class="card-title text-center">1500+ <br><span class="text-muted">Workshops Completed</span></h5>
+          </div>
+        </div>
+      </div>
+      <!-- Box -->
+      <div class="col-lg-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title text-center">1500+ <br><span class="text-muted">Workshops Completed</span></h5>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
 <!-- Buttons -->
 
 
