--- a/about/index.html
+++ b/about/index.html
@@ -41,6 +41,20 @@ background: '/assets/images/backgrounds/art-creative-flying-17679-3000.jpg'
   </div>
 </div>
 
+<h4 class="mt-5">Award Winning and Peer Reviewed Open Educational Resources</h4>
+{% assign awardWinners = site.documents | sort: "title" %}
+{% for item in awardWinners %}
+    {% if item.awards %}
+        <h5 class="mt-3"><a href="{{ item.url | relative_url }}">{{ item.title }}</a></h5>
+        <ul class="fa-ul">
+            {% for award in item.awards %}
+                {% include award-namify.html %}
+                <li><span class="fa-li"><i aria-hidden="true" class="fas fa-award"></i><span class="sr-only">Award icon</span></span>{{ awardName }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+{% endfor %}
+
 <!-- this captures the list of team member names from site.team-members -->
 {% capture member-name-list %}{{ site.team-members | map: 'username' | split: ',' }}{% endcapture %}
 
